-Add comments to socket config files about the removal of socket functionality. -Fix the issue of theme button parent div covering the "send" button on MessageInput, thus making it unclickable. -Fix autoFocus function consistentcy of MessageInputBox by forcing MessageInputBox remount on contact change.

--- a/src/styles/MessageInputBox.css
+++ b/src/styles/MessageInputBox.css
@@ -5,6 +5,7 @@
     width: 100%;
     background-color: inherit !important;
     border-top: inherit !important;
+    margin-right: 10px;
 }
 
 .fileInputMessageBox{
